@@ -77,6 +77,19 @@ fileuploadbutton               "Hochladen"
 fileuploadconfirm              "Wollen Sie wirklich die Datei(en) hochladen und existierenende Dateien ggf. ersetzen?"
 fileuploadmore                 "mehrere Dateien hochladen"
 fileuploadtext                 "Datei: "
+filter                         "Ansicht-Filter: "
+filter.apply                   "Ansicht-Filter anwenden"
+filter.reset                   "Ansicht-Filter löschen"
+filter.size.showonly           "Zeige nur Dateien "
+filter.size.title              "Größe: "
+filter.time.showonly           "Zeige nur Dateien/Ordner "
+filter.time.title              "Datum: "
+filter.title                   "Ansicht-Filter"
+filter.types.files             "Dateien"
+filter.types.folder            "Ordner"
+filter.types.links             "Links"
+filter.types.showonly          "Zeige nur "
+filter.types.title             "Dateitypen: "
 folderexists                   "Ordner existiert bereits"
 folderisfiltered               "Dieser Ordner-Inhalt wird gefiltert (Regex-Filter: %s)."
 foldernotreadable              "Dieser Ordner ist nicht lesbar (fehlende Zugriffsrechte)."
