@@ -84,6 +84,19 @@ fileuploadbutton               "Upload"
 fileuploadconfirm              "Do you really want to upload file(s) and replace existing file(s)?"
 fileuploadmore                 "more files"
 fileuploadtext                 "File: "
+filter                         "View Filter: "
+filter.apply                   "Apply Filter"
+filter.reset                   "Reset View Filter"
+filter.size.showonly           "show files "
+filter.size.title              "File size: "
+filter.time.showonly           "show files and folders "
+filter.time.title              "Datum: "
+filter.title                   "View Filter"
+filter.types.files             "files"
+filter.types.folder            "folder"
+filter.types.links             "links"
+filter.types.showonly          "show only "
+filter.types.title             "File type: "
 folderexists                   "folder exists"
 folderisfiltered               "This folder is filtered (regex: %s)."
 foldernotreadable              "This folder is not readable (no read permission)."
