@@ -7,6 +7,7 @@
      - Web interface:
            - improved display of byte sizes (flexible unit change) (GET)
 	   - added symbolic link support (POST)
+	   - added view filter (GET)
 
 0.7.0: 2011/29/04
      - fixed major search bug (SEARCH; thx jfotop@ath.forthnet.gr)
